# stock_analyzer

./: .bandit  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  DEVELOPMENT.md  README.md  config.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
app/: __init__.py  main.py
app/config/: __init__.py  secrets_loader.py  settings.py  theme.py
app/server/: __init__.py  handlers.py
app/tasks/: periodic_tasks.py
app/ui/: __init__.py  components.py  pages.py  styles.py
app/utils/: __init__.py  analysis.py  data_loader.py  database.py  models.py  technical_analysis.py  ticker_manager.py  visualization.py
config/: secrets.example.py  secrets_loader.py
tests/: __init__.py  conftest.py  test_analysis.py  test_data_loader.py  test_models.py
