[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-analyzer"
version = "0.1.0"
description = "Shiny web app for fundamental analysis on stocks"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Stock Analyzer Team", email = "team@stockanalyzer.local"}
]
keywords = ["stocks", "fundamental-analysis", "machine-learning", "shiny", "web-app"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "shiny>=0.8.0",
    "scikit-learn>=1.3.0",
    "keras>=2.14.0",
    "tensorflow>=2.14.0",
    "polars>=0.19.0",
    "pyarrow>=13.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "TA-lib>=0.4.28",
    "edgar-tools>=1.0.0",
    "zipline-reloaded>=3.0",
    "yfinance>=0.2.32",
    "numpy>=1.24.0",
    "pandas>=2.1.0",
    "pytest>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "jupyter>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/steiner-de/stock_analyzer"
Repository = "https://github.com/steiner-de/stock_analyzer.git"
Documentation = "https://github.com/steiner-de/stock_analyzer#readme"
Issues = "https://github.com/steiner-de/stock_analyzer/issues"

[tool.setuptools]
packages = ["app", "app.ui", "app.server", "app.utils"]

[tool.setuptools.package-data]
app = ["py.typed"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v --tb=short"
testpaths = ["tests"]
python_files = "test_*.py"

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
# Ruff configuration for Stock Analyzer
line-length = 100
target-version = "py39"
fix = true

# Enable Ruff linter rules
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "RUF",    # Ruff-specific rules
    "S",      # flake8-bandit (security)
]

ignore = [
    "E501",   # Line too long (handled by formatter)
    "S101",   # Use of assert
    "S104",   # Possible binding to all interfaces
]

# Exclude directories
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    ".eggs",
    "*.egg",
    "build",
    "dist",
    ".pytest_cache",
    ".mypy_cache",
    "notebooks",
]

# Per-file ignore rules
[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "E402"]
"tests/**" = ["S101", "S601"]

[tool.ruff.isort]
profile = "black"
known-first-party = ["app"]

[tool.ruff.format]
# Black-compatible formatting
line-length = 100
indent-width = 4
