[metadata]
name = stock-analyzer
version = 0.1.0

[options]
packages = find:
python_requires = >=3.9

[flake8]
max-line-length = 100
exclude = .git,__pycache__,.venv,venv,.eggs,*.egg,build,dist,.pytest_cache,.mypy_cache,notebooks
ignore = E203,E501,W503,W504

[mypy]
python_version = 3.9
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = False
ignore_missing_imports = True

[tool:pytest]
testpaths = tests
addopts = -v --tb=short --strict-markers
